<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/recipe_step_player_view"
        android:layout_weight="1"
        style="@style/PlayerViewStyle"/>

    <TextView
        android:id="@+id/tv_step_description"
        android:layout_weight="1"
        tools:text="@string/test_text"
        style="@style/StepDescriptionStyle" />

</LinearLayout>