<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    android:elevation="4dp"
    style="@style/BakingAppCardStyle">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/step_image"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:scaleType="centerCrop"
            tools:src="@drawable/recipe_placeholder" />

        <TextView
            android:id="@+id/tv_description"
            tools:text="@string/test_text"
            android:layout_width="0dp"
            android:layout_weight="5"
            style="@style/BaseItemStyle" />

        <ImageButton
            android:id="@+id/play_step_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/PlayButtonStyle"/>

    </LinearLayout>
</android.support.v7.widget.CardView>